@@ -166,6 +166,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #1533164: Installed but not listed *.pyo was breaking Distutils
+  bdist_rpm command.
+
+- Issue #5378: added --quiet option to Distutils bdist_rpm command.
+
 - Issue #5052: make Distutils compatible with 2.3 again.
 
 - Deprecated methods of symtable.Symbol have been removed: is_keywordarg(),
